--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "symfony/dom-crawler": "2.7.*@dev"
+        "symfony/dom-crawler": "2.5.7"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
