--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "symfony/dom-crawler": "2.5.7"
+        "symfony/dom-crawler": "2.5.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        
     },
     "autoload": {
         "psr-4": {
